--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,8 @@
 }
 
 @font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: 'Pretendard-Bold';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
@@ -23,4 +23,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
 }
